Added some content about myself

--- a/app/about/about.html
+++ b/app/about/about.html
@@ -1,3 +1,14 @@
 <div class="about">
-  Hi, i'm front-end developer, focused on developing interactive websites and highly loaded web applications.
+  <div class="contacts">
+    Odessa, Ukraine <br>
+    googruff@gmail.com <br>
+    8(093)0265859 <br>
+  </div>
+  <p>
+    Hi, i'm front-end developer, focused on developing interactive websites and highly loaded web applications.
+  </p>
+  –
+  <p>
+    In my free time, for self-study and as a hobby I develop a client part for the application that provides functionality for viewing statistics from gps trackers. For example drawing tracks on the map, switching between maps, viewing the speed limit, sorting tracks by date, import/export data, and other features which will be implemented in the future.
+  </p>
 </div>
